objects/SBQQ__QuoteDocument__c.object
<CustomObject>
    <customHelpPage>SBQQ__QuoteDocumentHelp</customHelpPage>
    <description>Particular version of a generated PDF document for the quote it&apos;s attached to. Ability to edit or delete this object should be taken away from all users (except administrators, of course) in order to preserve audit trail of all revisions.</description>
    <fields>
        <fullName>SBQQ__AttachmentId__c</fullName>
        <description>ID of attachment record generated for this document.</description>
        <inlineHelpText>ID of attachment record generated for this document.</inlineHelpText>
        <label>Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CustomerAmount__c</fullName>
        <description>Customer amount on the quote at the time this document was generated.</description>
        <inlineHelpText>Customer amount on the quote at the time this document was generated.</inlineHelpText>
        <label>Customer Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__DocumentId__c</fullName>
        <description>ID of the Document record which contains its generated PDF.</description>
        <inlineHelpText>ID of the Document record which contains its generated PDF.</inlineHelpText>
        <label>Document Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ElectronicSignature__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this document was generated for electronic signature.</description>
        <inlineHelpText>Document signed electronically.</inlineHelpText>
        <label>Electronic Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Key__c</fullName>
        <description>Key used to ensure unique combination of quote ID and version number.</description>
        <inlineHelpText>Key used to ensure unique combination of quote ID and version number.</inlineHelpText>
        <label>Key</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SBQQ__ListAmount__c</fullName>
        <description>List amount of the quote at the time this document was generated.</description>
        <inlineHelpText>List amount of the quote at the time this document was generated.</inlineHelpText>
        <label>List Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__NetAmount__c</fullName>
        <description>Net amount on the quote at the time this document was generated.</description>
        <inlineHelpText>Net amount on the quote at the time this document was generated.</inlineHelpText>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Opportunity that parents the Quote for this document. This relationship is here so that it&apos;s possible to have Quote Documents related list on the Opportunity as well as the Quote.</description>
        <inlineHelpText>References the opportunity on the quote for this document.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quote Documents</relationshipLabel>
        <relationshipName>R00N700000029COgEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__OutputFormat__c</fullName>
        <description>Output format of this document.</description>
        <inlineHelpText>Choose format for this document.</inlineHelpText>
        <label>Output Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PDF</fullName>
                    <default>true</default>
                    <label>PDF</label>
                </value>
                <value>
                    <fullName>MS Word</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__PrimaryContactId__c</fullName>
        <description>ID of primary contact in the quote. Used in Email button to default the To field.</description>
        <formula>SBQQ__Quote__r.SBQQ__PrimaryContact__c</formula>
        <inlineHelpText>References the primary contact for the quote to be used on the Email button, which defaults the To field.</inlineHelpText>
        <label>Primary Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Quote Template that generated this document.</inlineHelpText>
        <label>Quote Template</label>
        <referenceTo>SBQQ__QuoteTemplate__c</referenceTo>
        <relationshipLabel>Quote Documents</relationshipLabel>
        <relationshipName>Quote_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Quote__c</fullName>
        <description>Quote to which this Quote Document belongs.</description>
        <inlineHelpText>Quote to which this Quote Document belongs.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Quote Documents</relationshipLabel>
        <relationshipName>R00N70000001lX7YEAU</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQ__SignatureStatus__c</fullName>
        <description>Status of electronic signature.</description>
        <inlineHelpText>Status of electronic signature.</inlineHelpText>
        <label>Signature Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Revoked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Template__c</fullName>
        <description>Name of the template used to generate this document.</description>
        <inlineHelpText>Name of the template used to generate this document.</inlineHelpText>
        <label>Template</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Version__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Sequentially incremented version number.</description>
        <inlineHelpText>Sequentially incremented version number.</inlineHelpText>
        <label>Version</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__ViewRecordId__c</fullName>
        <formula>IF(ISBLANK(SBQQ__AttachmentId__c),SBQQ__DocumentId__c,SBQQ__AttachmentId__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Record Id</label>
        <type>Text</type>
    </fields>
    <label>Quote Document</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>